--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <div class="project-content">
                     <h4 class="project-title">Einfacher Blog mit Flask</h4>
                     <p class="project-description">
-                        Eine simple Blog-Anwendung zum Erstellen und Anzeigen von Beiträgen. Fokus auf Flask-Routing, Templates (Jinja2) und grundlegende Formularverarbeitung.
+                        Eine simple Blog-Anwendung zum Erstellen und Anzeigen von Beiträgen. Fokus auf Flask-Routing. Mit einfachen Login, erstellen von Blog-Beiträgen sowie bearbeiten und löschen von Beiträgen.
                     </p>
                     <div class="project-tech-stack">
                         <span class="project-tech-tag">Python</span>
@@ -184,7 +184,7 @@
                         <span class="project-tech-tag">CSS</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="project-link" target="_blank" rel="noopener noreferrer">GitHub</a>
+                        <a href="https://github.com/clvsaYani/FlaskDemo" class="project-link" target="_blank" rel="noopener noreferrer">GitHub</a>
                     </div>
                 </div>
             </div>
